--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -24,6 +24,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_swiper: ^1.1.6
+  dio: ^2.1.13
+  flutter_webview_plugin: ^0.3.7
+  date_format: ^1.0.6
+  shared_preferences: ^0.5.3+4
+  fluttertoast: ^3.1.3
+  flutter_screenutil: ^0.6.0
+  flutter_easyrefresh: ^2.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -53,6 +61,27 @@ flutter:
       - images/default_icon.png
       - images/car_1.png
       - images/car_2.png
+      - images/focusBg.png
+      - images/focusGray.png
+      - images/focusOn.png
+      - images/viewBg.png
+      - images/travel.png
+      - images/travel_tel.png
+      - images/travel_navi.png
+      - images/travel_share.png
+      - images/login_bg.png
+      - images/xk_logo.png
+      - images/empty.png
+      - images/mine_order.png
+      - images/mine_bank.png
+      - images/charge.png
+      - images/dopay.png
+      - images/bank_bg.png
+      - images/bank_logo.png
+      - images/recommend_bg.png
+      - images/recommend_bg2.png
+      - images/recommend_bg3.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
